--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 description: "#请你好好求知然后求生#"
-hello: "UR The WeberFucker"
+hello: "KimChan Will Come"
 ---
 
 {% for post in paginator.posts %}
