--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 hello: "#关于"
-description: "哈哈哈"
+description: "要么敲代码要么踩单车"
 header-img: "img/about-bg-walle.jpg"
 multilingual: false
 ---
@@ -10,15 +10,3 @@ multilingual: false
     {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
     {{ about_zh | markdownify }}
 </div>
-
-{% if site.disqus_username %}
-<!-- disqus 评论框 start -->
-<div class="comment">
-    <div id="disqus_thread" class="disqus-thread">
-
-    </div>
-</div>
-<!-- disqus 评论框 end -->
-
-
-{% endif %}
